fix: collapse correctly with updates from upstream

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -43,12 +43,11 @@ ul,
 .math {
   color: var(--darkgray);
   fill: var(--darkgray);
-  overflow-wrap: break-word;
+  overflow-wrap: anywhere;
   hyphens: auto;
 }
 
 .math {
-  font-size: 1rem;
   &.math-display {
     text-align: center;
   }
@@ -202,6 +201,11 @@ a {
       margin-right: 0;
     }
   }
+}
+
+.footnotes {
+  margin-top: 2rem;
+  border-top: 1px solid var(--lightgray);
 }
 
 input[type="checkbox"] {
@@ -470,7 +474,7 @@ video {
 
 ul.overflow,
 ol.overflow {
-  height: 350px;
+  max-height: 400;
   overflow-y: auto;
 
   // clearfix
@@ -485,10 +489,10 @@ ol.overflow {
     pointer-events: none;
     content: "";
     width: 100%;
-    height: 30px;
+    height: 50px;
     position: absolute;
     left: 0;
-    bottom: 30px;
+    bottom: 0;
     opacity: 1;
     transition: opacity 0.3s ease;
     background: linear-gradient(transparent 0px, var(--light));
